Attempt at fixing scroll break on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -27,6 +27,7 @@ body {
     font-family: 'Roboto', sans-serif;
 
     &.no-overflow {
+        height: 100vh;
         overflow: hidden;
     }
 }
